--- a/sassa/srd-status-check/index.html
+++ b/sassa/srd-status-check/index.html
@@ -303,7 +303,21 @@ You will enter your …">
 <li>Send an email request to <a href="mailto:SRD@sassa.gov.za">SRD@sassa.gov.za</a></li>
 <li>The SRD form will be sent to you via email to fill in</li>
 </ol>
-<p></p>
+<p>
+    <div class="advert-inline">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2778326707935813" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="autorelaxed"
+            data-ad-client="ca-pub-2778326707935813"
+            data-ad-slot="4900461900"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
+
+</p>
 <h3 id="what-you-will-need">What you will need</h3>
 <ol>
 <li>ID number or Department of Home Affairs refugee permit number</li>
@@ -324,13 +338,41 @@ You will enter your …">
 </ul>
 <p>The SRD grant is due to come to an end in March 2023. Every month until then the Sassa R350 grant applications remain open and will be paid out on the 15th.</p>
 <p>You can easily change your payment preference or check your application status through the website: <a href="https://srd.sassa.gov.za">https://srd.sassa.gov.za</a></p>
-<p></p>
+<p>
+    <div class="advert-inline">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2778326707935813" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="autorelaxed"
+            data-ad-client="ca-pub-2778326707935813"
+            data-ad-slot="4900461900"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
+
+</p>
 <h2 id="new-rules-for-the-social-relief-of-distress-grant">New Rules for the Social Relief of Distress Grant</h2>
 <p>The Special Relief of Distress (SRD) grant for the unemployed is now managed under new rules as per the <strong>Social Assistance Act</strong> and not the State of Disaster Act, since the State of Disaster has come to an end.</p>
 <p>Under the new rules, existing beneficiaries are urged to reapply.</p>
 <p>Once you have applied through one of the following methods, you do not need to reapply again. You will receive confirmation as soon as your application is successfully submitted.</p>
 <p>The applications received will be approved / rejected before the 15th of the month. You will receive an SMS informing you if your application was approved or not.</p>
-<p></p>
+<p>
+    <div class="advert-inline">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2778326707935813" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="autorelaxed"
+            data-ad-client="ca-pub-2778326707935813"
+            data-ad-slot="4900461900"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
+
+</p>
 <h2 id="srd-grant-will-only-be-eligible-to-people">SRD Grant will only be eligible to people</h2>
 <ul>
 <li>Currently residing in SA</li>
@@ -344,7 +386,21 @@ You will enter your …">
 <li>Caregivers who are not receiving any grant on their own behalf will also be eligible to receive the grant this time around.</li>
 <li>SA citizen, permanent resident, refugee registered with the Home Affairs database, holders of special permits or asylum seekers with valid VISA</li>
 </ul>
-<p></p>
+<p>
+    <div class="advert-inline">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2778326707935813" crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-format="autorelaxed"
+            data-ad-client="ca-pub-2778326707935813"
+            data-ad-slot="4900461900"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
+
+</p>
         
 
         
