--- a/license/how-to-renew-car-license-disc-online/index.html
+++ b/license/how-to-renew-car-license-disc-online/index.html
@@ -10,9 +10,8 @@
 <meta name="description" content="We all know the headache of queuing at the Driving Licence Testing Centre for a car licence disc renewal. Here’s how to renew your car license disc online.">
 <meta name="author" content="Me">
 <link rel="canonical" href="https://www.salocal.info/license/how-to-renew-car-license-disc-online/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.0b739a2e2c5e5656e4bcd5f0b2268d063addaf81d89ec3987d6af8f04decdc97.css" integrity="sha256-C3OaLixeVlbkvNXwsiaNBjrdr4HYnsOYfWr48E3s3Jc=" rel="preload stylesheet" as="style">
-<script defer crossorigin="anonymous" src="/assets/js/highlight.acb54fd32bbc1982428b8850317e45d076b95012730a5936667e6bc21777692a.js" integrity="sha256-rLVP0yu8GYJCi4hQMX5F0Ha5UBJzClk2Zn5rwhd3aSo="
-    onload="hljs.initHighlightingOnLoad();"></script>
+<link crossorigin="anonymous" href="/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
+<script defer crossorigin="anonymous" src="/assets/js/highlight.js" onload="hljs.initHighlightingOnLoad();"></script>
 <link rel="icon" href="https://www.salocal.info/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://www.salocal.info/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://www.salocal.info/favicon-32x32.png">
